# Cisco-SG-200-port-leds

./: Dockerfile  README.md  docker-compose.yml  dockerignore  pyproject.toml  requirements.txt
src/: get_events_from_calendar.py  logger.py  main.py  scraper.py
